Separado os controlles e refactory